# xyz-to-cbz

./: .gitignore  Cargo.toml  Justfile  LICENSE
.forgejo/workflows/: rust.yml
.github/workflows/: rust.yml
src/: cbz.rs  cli.rs  lib.rs  main.rs  startup.rs
src/yiffer/: client.rs  comic.rs  mod.rs
test/: Blueberry Jam - Yiffer.html  Kissy Cousin - Yiffer.html
