[package]
name = "xyz-to-cbz"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
fantoccini = { version = "0.19", default-features = false, features = ["rustls-tls"] }
itertools = "0.12"
log = { version = "0.4", features = ["std"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
scraper = "0.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.5"
zip = {version = "0.6", default_features = false, features = ["deflate"] }

[dev-dependencies]
wiremock = "0.6"
