[package]
name = "xyz-to-cbz"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
fantoccini = "0.21"
itertools = "0.13"
log = { version = "0.4", features = ["std"] }
reqwest = "0.12"
scraper = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.5"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
wiremock = "0.6"
